Improved compatibility with edge: disable the parallax due to z-index issues

--- a/app/assets/stylesheets/compatability.css
+++ b/app/assets/stylesheets/compatability.css
@@ -4,15 +4,19 @@ button::-moz-focus-inner {
   padding:0;
 }
 
-/*Firefox(android) fix*/
-html.andoid-mozilla .context-3d {
+/*Firefox(android)/Edge fix*/
+html.andoid-mozilla .context-3d,
+html.ms-edge .context-3d {
   perspective: none !important;
 }
-html.andoid-mozilla .layer-background .far,
-html.andoid-mozilla .layer-background .near {
+html.ms-edge .layer-background .far,
+html.ms-edge .layer-background .near,
+html.ms-edge .layer-background .far,
+html.ms-edge .layer-background .near {
   transform: none !important;
 }
-html.andoid-mozilla .context-3d .layer-foreground {
+html.andoid-mozilla .context-3d .layer-foreground,
+html.ms-edge .context-3d .layer-foreground {
 	position: absolute;
 }
 
